# TimeNtpConfiguration

./: CMakeLists.txt  MenuPage.cpp  MenuPage.h  README.md  localsync.conf  main.cpp
StatusCommands/: NtpStatusCommandsWidget.cpp  NtpStatusCommandsWidget.h
TimeConfiguration/: EditTimeWidget.cpp  EditTimeWidget.h  NtpWidget.cpp  NtpWidget.h  ShowTimeWidget.cpp  ShowTimeWidget.h  TimeWidget.cpp  TimeWidget.h
